--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Viesbutis</title>
+  <link rel="stylesheet" href="home.css">
 </head>
 
 <body>
+  <div class="background"></div>
+  <main id="container">
+    <div id="left-column">
+      <h1 id="main-title"></h1>
+    </div>
+    <div id="right-column">
+
+    </div>
+  </main>
   <div id="app"></div>
 
 
