--- a/form.html
+++ b/form.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Viesbutis</title>
-  <link rel="stylesheet" href="home.css">
+  <title>Sign Up</title>
+
   <link rel="stylesheet" href="form.css">
 </head>
 
@@ -14,37 +14,27 @@
   <div class="background"></div>
   <main class="container">
     <div class="left-column">
-      <h1 class="main-title">Sign up</h1>
-      <footer class="bottom-links">
-        <a href="#">Privacy policy"</a>
-        <span>&</span>
-        <a href="#">terms os service</a>
-      </footer>
+      <h1 class="main-title">New data form</h1>
     </div>
     <div class="right-column">
       <div class="close">x</div>
-
-      <form class="form" id="myform">
+      <form class="myform" id="myform">
         <div class="form-row">
-          <label for="username">Username</label>
-          <input id="username" type="text" placeholder="Your username..." required>
+          <label for="hotelname">Hotel name</label>
+          <input name="hotelname" type="text" placeholder="Hotel name ..." required>
         </div>
         <div class="form-row">
-          <label for="email">Email</label>
-          <input id="email" type="email" placeholder="Your email..." required>
+          <label for="address">Hotel address</label>
+          <input name="address" type="text" placeholder="Hotel address..." required>
         </div>
         <div class="form-row">
-          <label for="pass">Password</label>
-          <input id="pass" type="password" placeholder="Password..." required>
+          <label for="stars">Stars</label>
+          <input name="stars" type="number" placeholder="Enter hotel stars amount..." required>
+          <label for="comfortLevel">Minimal comfort level</label>
+          <input name="comfortLevel" type="number" placeholder="Minimal comfort level" required>
         </div>
         <div class="form-row">
-          <label for="repass">Repeat password</label>
-          <input id="repass" type="password" placeholder="Repeat password..." required>
-        </div>
-        <div class="form-row">
-          <button type="submit">Get started</button>
-          <span>or</span>
-          <a href="./sign-in/">Sign in</a>
+          <button type="submit">New hotel</button>
         </div>
       </form>
     </div>
@@ -52,20 +42,3 @@
 </body>
 
 </html>
-
-</html>
-
-<div id="app">
-  <form id="myform">
-    <fieldset>
-      <label>
-        Name:
-      </label>
-      <input type="text" name="textInput" />
-
-
-    </fieldset>
-    <button type="submit">Submit</button>
-
-  </form>
-</div>
